Modification de la config de docaposte [EN COURS]